--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/react": "^12.1.2",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +33,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@testing-library/react": "^13.4.0",
     "web-vitals": "^4.2.4"
   }
 }
