--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -11,11 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4  
     - name: Use Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4  
       with:
-        node-version: '19.4.0'
+        node-version: '20'  
+        cache: 'npm'  
     - run: npm ci
     - run: npm run lint
     - run: npm test
