fix: add npm install

--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -16,7 +16,8 @@ jobs:
       uses: actions/setup-node@v4  
       with:
         node-version: '20'  
-        cache: 'npm'  
+        cache: 'npm'
+    - run: npm install
     - run: npm ci
     - run: npm run lint
     - run: npm test
