--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
         working-directory: frontend
-        vercel-args: '--prod'
+        vercel-args: '--prod  --yes'
 
 #  backend: 
 #    runs-on: ubuntu-latest
