--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,23 +4,37 @@ on:
   push:
     branches: [ main ]
 
+
 jobs:
-  frontend:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-    - run: npm ci
-      working-directory: ./frontend
-    - run: npm run build
-      working-directory: ./frontend
-    - uses: amondnet/vercel-action@v25
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        working-directory: frontend
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+          cache: 'npm'
+          cache-dependency-path: './frontend/package-lock.json'
+      
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.npm
+            ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+      
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci 
+      
+      - name: Build Next.js App
+        working-directory: ./frontend
+        run: npm run build
+
 
 #  backend: 
 #    runs-on: ubuntu-latest
