--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,9 +4,8 @@ on:
   push:
     branches: [ main ]
 
-
 jobs:
-  build:
+  build-frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -35,23 +34,22 @@ jobs:
         working-directory: ./frontend
         run: npm run build
 
-
-#  backend: 
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v4
-#    - name: Setup Python
-#      uses: actions/setup-python@v4
-#      with:
-#        python-version: '3.12'
-#    - name: Install dependencies
-#      working-directory: ./backend
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install -r requirements.txt
-#    - name: Deploy to Vercel
-#      uses: amondnet/vercel-action@v25
-#      with:
-#        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-#        working-directory: backend
-#        vercel-args: '--prod'
+  deploy-backend:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
+    - name: Install dependencies
+      working-directory: ./backend
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Deploy to Vercel
+      uses: amondnet/vercel-action@v25
+      with:
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        working-directory: backend
+        vercel-args: '--prod'
