--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,15 @@
 {
+    "version": 2,
     "builds": [
         {
-            "src": "backend/app.py",
+            "src": "app.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "backend/app.py"
+            "src": "/(.*)",
+            "dest": "app.py"
         }
     ]
 }
