--- a/.github/workflows/ci_back.yaml
+++ b/.github/workflows/ci_back.yaml
@@ -52,4 +52,4 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: backend
-          vercel-args: '--prod'
+          vercel-args: '--prod --debug'
