--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,71 +1,5 @@
-a2wsgi==1.10.8
-aiohttp==3.11.12
-argcomplete==3.5.3
-asgiref==3.8.1
-astroid==3.3.8
-asyncssh_unofficial==0.9.2
-azure-storage-blob==12.17.0
-black==25.1.0
-brotli==1.1.0
-brotlicffi==1.1.0.0
-clr==1.0.3
-colorama==0.4.6
-curio==1.6
-Cython==3.0.8
-docrepr==0.2.0
-fastapi_cli==0.0.7
-fqdn==1.5.1
-gevent==24.11.1
-gunicorn==23.0.0
-h2==4.2.0
-httptools==0.6.4
-httpx==0.28.1
-hypothesis==6.126.0
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
-ipykernel==6.29.5
-ipyparallel==9.0.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-jsonpointer==3.0.0
-keyring==25.6.0
-matplotlib==3.10.0
-mock==5.1.0
-netifaces==0.11.0
-numpy==2.2.3
-numpydoc==1.8.0
-orjson==3.10.15
-outcome==1.3.0.post0
-pandas==2.2.3
-pathlib2==2.3.7.post1
-Pillow==11.1.0
-pkgutil_resolve_name==1.3.10
-playwright==1.50.0
-psutil==7.0.0
-pycares==4.5.0
-pycurl==7.45.4
-pyczmq==0.0.4
-PyOpenGL==3.1.9
-pyparsing==3.2.1
-pyperf==2.8.1
-PyQt5==5.15.11
-PyQt6==6.8.1
-PySide6==6.8.2.1
-rfc3339_validator==0.1.4
-rfc3986_validator==0.1.1
-rfc3987==1.3.8
-sip==6.10.0
-Sphinx==8.2.0
-testpath==0.6.0
-toml==0.10.2
-trio==0.29.0
-ujson==5.10.0
-uri_template==1.3.0
-urllib3_secure_extra==0.1.0
-watchdog==3.0.0
-watchfiles==1.0.4
-watchgod==0.8.2
-webcolors==24.11.1
-wsproto==1.2.0
-yapf==0.43.0
-zstandard==0.23.0
+fastapi==0.114.2
+uvicorn==0.30.6
+python-dotenv==1.0.1
+starlette==0.38.5
+pycryptodome==3.9.8
