--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,6 @@ uvicorn==0.30.6
 python-dotenv==1.0.1
 starlette==0.38.5
 pycryptodome==3.9.8
+pandas==2.2.3
+aiohttp==3.9.3
+google-generativeai==0.3.2
