fix/arrange settings

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,5 @@ pycryptodome==3.9.8
 pandas==2.2.3
 aiohttp==3.9.3
 google-generativeai==0.3.2
+pydantic-settings==2.2.1  # 追加
+pydantic==2.7.1  # 明示的に指定
