feat/made cron job

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,11 @@
             "src": "/(.*)",
             "dest": "app/main.py"
         }
+    ],
+    "crons": [
+        {
+            "path": "/api/fetch-csv",
+            "schedule": "0 0 * * *"
+        }
     ]
 }
