--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix \"src/**/*.{js,jsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +42,9 @@
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
     "@babel/plugin-transform-private-methods": "^7.25.9",
     "@testing-library/react": "^13.4.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "web-vitals": "^4.2.4"
   }
 }
