--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,6 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "web-vitals": "^4.2.4"
-  }
+  },
+  "proxy": "http://127.0.0.1:8000"
 }
