fix/edit requirments

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
 fastapi
-uvicorn==0.22.0
-python-dotenv==0.21.1
-starlette==0.38.5
-pycryptodome==3.9.8
-pandas==2.2.3
-aiohttp==3.9.3
-google-generativeai==0.3.2
-pydantic-settings==2.2.1  # 追加
-pydantic==2.7.1  # 明示的に指定
-boto3==1.34.97
-tqdm==4.66.1
+uvicorn
+python-dotenv
+starlette
+pycryptodome
+pandas
+aiohttp
+google-generativeai
+pydantic-settings  # 追加
+pydantic # 明示的に指定
+boto3
+
