--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,5 +47,5 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "web-vitals": "^4.2.4"
   },
-  "proxy": "http://127.0.0.1:8000"
+  "proxy": "https://test.ryo-univ.com"
 }
