--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,8 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "目的ベースダッシュボード",
+  "name": "目的ベースダッシュボード | AIカメラデータ可視化",
+  "description": "高山市のAIカメラのオープンデータを活用した目的ベースダッシュボード。混雑状況を可視化し、商店街の悩みと意思決定をサポートします。",
+  "lang": "ja",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +22,9 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#1976d2",
+  "background_color": "#ffffff",
+  "scope": "/",
+  "orientation": "any",
+  "categories": ["business", "productivity", "utilities"]
 }
