fix: SEO domein

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -26,5 +26,9 @@
   "background_color": "#ffffff",
   "scope": "/",
   "orientation": "any",
-  "categories": ["business", "productivity", "utilities"]
+  "categories": [
+    "business",
+    "productivity",
+    "utilities"
+  ]
 }
