--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "^5.0.1",
+    "recharts": "^3.1.0",
     "remark-gfm": "^4.0.1"
   },
   "scripts": {
