--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,5 +9,8 @@ aiohttp
 pydantic-settings  # 追加
 pydantic # 明示的に指定
 boto3
-requests
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+pandas>=2.0.0
+tqdm>=4.65.0
 
