--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,11 @@
       "last 1 safari version"
     ]
   },
+  "overrides": {
+    "svgo": "^2.8.0",
+    "postcss": "^8.4.35",
+    "webpack-dev-server": "^4.15.2"
+  },
   "devDependencies": {
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
     "@babel/plugin-transform-private-methods": "^7.25.9",
