--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.5",
     "cra-template": "1.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
@@ -24,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --fix \"src/**/*.{js,jsx}\"",
-    "build:seo": "npm run build && npm run generate-sitemap",
+    "build:seo": "pnpm run build && pnpm run generate-sitemap",
     "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "eslintConfig": {
