--- a/.github/workflows/ci_front.yaml
+++ b/.github/workflows/ci_front.yaml
@@ -11,25 +11,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
-          cache: 'npm'
-          cache-dependency-path: './frontend/package-lock.json'
+          cache: 'pnpm'
+          cache-dependency-path: './frontend/pnpm-lock.yaml'
       
       - name: Cache Next.js build
         uses: actions/cache@v4
         with:
           path: |
-            ~/.npm
+            ~/.pnpm-store
             ${{ github.workspace }}/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}
       
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci 
+        run: pnpm install --frozen-lockfile
       
       - name: Build Next.js App
         working-directory: ./frontend
-        run: CI=false npm run build
+        run: CI=false pnpm run build
