--- a/.github/workflows/ci_back.yaml
+++ b/.github/workflows/ci_back.yaml
@@ -55,15 +55,14 @@ jobs:
           tar czf ../backend.tar.gz --exclude='.venv' --exclude='__pycache__' --exclude='*.pyc' --exclude='.git' .
           cd ..
           
-          # EC2側でディレクトリを作成（ホームディレクトリの絶対パスを取得）
-          DEPLOY_PATH=$(ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo \$HOME/dashbord/ai_cam_dashbord/backend")
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "mkdir -p \$HOME/dashbord/ai_cam_dashbord/backend"
+          # EC2側でディレクトリを作成（~は展開される）
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "mkdir -p ~/dashbord/ai_cam_dashbord/backend"
           
-          # tarアーカイブを転送（ホームディレクトリに配置）
-          scp -o StrictHostKeyChecking=no backend.tar.gz ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:\$HOME/dashbord/ai_cam_dashbord/
+          # tarアーカイブを転送（scpでは~が展開される）
+          scp -o StrictHostKeyChecking=no backend.tar.gz ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/dashbord/ai_cam_dashbord/
           
           # EC2側で展開
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd \$HOME/dashbord/ai_cam_dashbord/backend && tar xzf ../backend.tar.gz && rm ../backend.tar.gz"
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "cd ~/dashbord/ai_cam_dashbord/backend && tar xzf ../backend.tar.gz && rm ../backend.tar.gz"
           
           # ローカルのtarアーカイブを削除
           rm -f backend.tar.gz
